--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.1.0",
     "@angular/cdk": "~8.2.3",
+    "@angular/cli": "^8.1.0",
+    "@angular/compiler-cli": "^8.1.0",
     "@angular/common": "^8.1.0",
     "@angular/compiler": "^8.1.0",
     "@angular/core": "^8.1.0",
@@ -29,7 +32,6 @@
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
     "core-js": "^2.6.9",
-    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery-slimscroll": "^1.3.8",
@@ -44,10 +46,10 @@
     "ngx-perfect-scrollbar": "^5.0.0",
     "ngx-quill": "^3.1.0",
     "node-sass": "^4.12.0",
-    "path": "^0.12.7",
     "popper.js": "^1.12.5",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
+    "typescript": "3.4.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -61,7 +63,6 @@
     "@types/jquery": "^3.3.30",
     "@types/node": "^6.14.6",
     "codelyzer": "^5.0.1",
-    "enhanced-resolve": "^4.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -74,5 +75,9 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "3.4.5"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.7"
   }
 }
