--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/animations": "^8.1.0",
     "@angular/cdk": "~8.2.3",
     "@angular/cli": "^8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
     "@angular/common": "^8.1.0",
     "@angular/compiler": "^8.1.0",
+    "@angular/compiler-cli": "^8.1.0",
     "@angular/core": "^8.1.0",
     "@angular/forms": "^8.1.0",
     "@angular/material": "^8.2.3",
@@ -32,6 +32,7 @@
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
     "core-js": "^2.6.9",
+    "enhanced-resolve": "^4.2.0",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery-slimscroll": "^1.3.8",
