--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chartist": "^0.11.0",
     "core-js": "^2.6.9",
     "enhanced-resolve": "^4.2.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery-slimscroll": "^1.3.8",
@@ -47,6 +48,7 @@
     "ngx-perfect-scrollbar": "^5.0.0",
     "ngx-quill": "^3.1.0",
     "node-sass": "^4.12.0",
+    "path": "^0.12.7",
     "popper.js": "^1.12.5",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
