--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.1.0",
     "@angular/cdk": "~8.2.3",
-    "@angular/cli": "^8.1.0",
     "@angular/common": "^8.1.0",
     "@angular/compiler": "^8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
     "@angular/core": "^8.1.0",
     "@angular/forms": "^8.1.0",
     "@angular/material": "^8.2.3",
@@ -32,8 +29,6 @@
     "chart.js": "^2.7.1",
     "chartist": "^0.11.0",
     "core-js": "^2.6.9",
-    "enhanced-resolve": "^4.2.0",
-    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery-slimscroll": "^1.3.8",
@@ -48,12 +43,10 @@
     "ngx-perfect-scrollbar": "^5.0.0",
     "ngx-quill": "^3.1.0",
     "node-sass": "^4.12.0",
-    "path": "^0.12.7",
     "popper.js": "^1.12.5",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
-    "zone.js": "~0.9.1",
-    "typescript": "3.4.5"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -78,9 +71,5 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "3.4.5"
-  },
-  "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.7"
   }
 }
